--- a/software.html
+++ b/software.html
@@ -185,7 +185,7 @@ $(document).ready(function () {
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
         <li>
-  <a href="software.html">R scripts</a>
+  <a href="software.html">Data &amp; Scripts</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
@@ -227,14 +227,20 @@ $(document).ready(function () {
 
 
 <p><link rel="stylesheet" href="styles.css" type="text/css"></p>
-<div id="functional-diversity-r-functions-toussaint-et-al.-sci.-rep-2016" class="section level3">
-<h3>Functional diversity R functions (Toussaint et al. Sci. Rep (2016))</h3>
+<div id="r-scripts" class="section level2">
+<h2>R scripts</h2>
+<div id="functional-diversity-toussaint-et-al.-sci.-rep-2016" class="section level3">
+<h3>Functional diversity (Toussaint et al. <em>Sci. Rep</em> (2016))</h3>
 <ul>
 <li><a href="data/FunctionR_FDnull.R">FDnull</a>: R function to compare the functional volume of a community based on functional traits to a random a random pool assemblage</li>
 <li><a href="data/FunctionR_FDnullChge.R">FDnullChge</a>: R function to compare the functional volume of a community based on functional traits to a random a random pool assemblage</li>
 <li><a href="data/FunctionR_Funiq.R">Funiq</a>: R function to compute and illustrate the proportion of the area (in 2dimensions) or volume of a taxonomic group not filled by any others species of the community</li>
 <li><a href="data/FunctionR_Fvulne.R">Fvulne</a>: R function to compute and illustrate the proportion of the area (in 2dimensions) or volume loss if all vulnerable species disapeared</li>
 </ul>
+</div>
+</div>
+<div id="data" class="section level2">
+<h2>Data</h2>
 </div>
 
 
