--- a/contact.html
+++ b/contact.html
@@ -185,7 +185,7 @@ $(document).ready(function () {
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
         <li>
-  <a href="software.html">R scripts</a>
+  <a href="software.html">Data &amp; Scripts</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
