--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@ div.tocify {
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
         <li>
-  <a href="software.html">R scripts</a>
+  <a href="software.html">Data &amp; Scripts</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
