--- a/blog.html
+++ b/blog.html
@@ -230,26 +230,8 @@ $(document).ready(function () {
 
 
 <p><link rel="stylesheet" href="styles.css" type="text/css"></p>
-<div id="r-scripts" class="section level2">
-<h2>R scripts</h2>
-<div id="functional-diversity-toussaint-et-al.-sci.-rep.-2016" class="section level3">
-<h3>Functional diversity (Toussaint et al. <em>Sci. Rep.</em> 2016)</h3>
-<ul>
-<li><a href="data/FunctionR_FDnull.R">FDnull</a>: R function to compare the functional volume of a community based on functional traits to a random a random pool assemblage</li>
-<li><a href="data/FunctionR_FDnullChge.R">FDnullChge</a>: R function to compare the functional volume of a community based on functional traits to a random a random pool assemblage</li>
-<li><a href="data/FunctionR_Funiq.R">Funiq</a>: R function to compute and illustrate the proportion of the area (in 2dimensions) or volume of a taxonomic group not filled by any others species of the community</li>
-<li><a href="data/FunctionR_Fvulne.R">Fvulne</a>: R function to compute and illustrate the proportion of the area (in 2dimensions) or volume loss if all vulnerable species disapeared</li>
-</ul>
-</div>
-</div>
-<div id="data" class="section level2">
-<h2>Data</h2>
-<div id="functional-diversity-of-the-world-freshwater-fish-faunas-toussaint-et-al.-ecol.-lett.-2018" class="section level3">
-<h3>Functional diversity of the world freshwater fish faunas (Toussaint et al. <em>Ecol. Lett.</em> 2018)</h3>
-<ul>
-<li>Zipped file containing csv tables with information on the global distribution of freshwater fish species functional traits, basin occurrences, and taxonomic and functional indices. available on FigShare repository: <a href="https://figshare.com/account/projects/36980/articles/6984206">here</a></li>
-</ul>
-</div>
+<div id="blog" class="section level1">
+<h1>Blog</h1>
 </div>
 
 
