--- a/contact.html
+++ b/contact.html
@@ -187,6 +187,9 @@ $(document).ready(function () {
         <li>
   <a href="software.html">Data &amp; Scripts</a>
 </li>
+<li>
+  <a href="blog.html">Blog</a>
+</li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
