--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<link href="site_libs/bootstrap-3.3.5/css/paper.min.css" rel="stylesheet" />
+<link href="site_libs/bootstrap-3.3.5/css/cosmo.min.css" rel="stylesheet" />
 <script src="site_libs/bootstrap-3.3.5/js/bootstrap.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/html5shiv.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/respond.min.js"></script>
@@ -23,7 +23,7 @@
 <link href="site_libs/tocify-1.9.1/jquery.tocify.css" rel="stylesheet" />
 <script src="site_libs/tocify-1.9.1/jquery.tocify.js"></script>
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
-<link href="site_libs/highlightjs-9.12.0/default.css" rel="stylesheet" />
+<link href="site_libs/highlightjs-9.12.0/textmate.css" rel="stylesheet" />
 <script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
 <link href="site_libs/font-awesome-5.0.13/css/fa-svg-with-js.css" rel="stylesheet" />
 <script src="site_libs/font-awesome-5.0.13/js/fontawesome-all.min.js"></script>
@@ -109,34 +109,34 @@ button.code-folding-btn:focus {
 <style type="text/css">
 /* padding for bootstrap navbar */
 body {
-  padding-top: 64px;
+  padding-top: 51px;
   padding-bottom: 40px;
 }
 /* offset scroll position for anchor links (for fixed navbar)  */
 .section h1 {
-  padding-top: 69px;
-  margin-top: -69px;
+  padding-top: 56px;
+  margin-top: -56px;
 }
 
 .section h2 {
-  padding-top: 69px;
-  margin-top: -69px;
+  padding-top: 56px;
+  margin-top: -56px;
 }
 .section h3 {
-  padding-top: 69px;
-  margin-top: -69px;
+  padding-top: 56px;
+  margin-top: -56px;
 }
 .section h4 {
-  padding-top: 69px;
-  margin-top: -69px;
+  padding-top: 56px;
+  margin-top: -56px;
 }
 .section h5 {
-  padding-top: 69px;
-  margin-top: -69px;
+  padding-top: 56px;
+  margin-top: -56px;
 }
 .section h6 {
-  padding-top: 69px;
-  margin-top: -69px;
+  padding-top: 56px;
+  margin-top: -56px;
 }
 </style>
 
@@ -331,7 +331,7 @@ div.tocify {
 <p><img src="data/AT_pic.jpg" style="width:30%; border:5px solid; margin-right: 20px" align="right"></p>
 <p>I like to analyze data to answer research questions and test hypotheses. Currently I investigate questions related to global correlation between functional and taxonomic diversity of distant groups (fishes, plants and fungi) at <a href="https://www.botany.ut.ee/macroecology/en/">University of Tartu</a> in the Macroecolofgy workgroup under the direction of <a href="https://www.botany.ut.ee/macroecology/en/partel">Meelis Pärtel</a>.</p>
 <p>I graduated from the <a href="http://www.univ-tlse3.fr/">University of Toulouse</a> with a MS in biostatistics in 2012. In 2012 I began working toward my PhD in macroecology as a PhD-student at <a href="www.edb.ups-tlse.fr">EDB-lab</a>, where I am investigating functional diversity of freshwater fishes at the world scale under the advisement of <a href="http://brosse.sebastien.free.fr/">Pr. Sébastien Brosse</a> and <a href="http://villeger.sebastien.free.fr/">Dr. Sébastien Villéger</a></p>
-<p>I am a well-known R enthusiast, including performing graphics and data mining.</p>
+<p>I am a well-known R enthusiast, including performing high levels graphics and data mining.</p>
 <p>My full CV is available <a href="data/CV_Toussaint.pdf">here</a>.</p>
 <div id="publications" class="section level1">
 <h1>Publications</h1>
@@ -367,7 +367,7 @@ div.tocify {
 </div>
 <div id="phd-dissertation" class="section level1">
 <h1>PhD Dissertation</h1>
-<p>During my PhD, I investigated functional diversity of freshwater fishes at the world scale under the advisement of <a href="brosse.sebastien.free.fr">Pr. Sébastien Brosse</a> and <a href="http://villeger.sebastien.free.fr/">Dr. Sébastien Villéger</a></p>
+<p>During my PhD, I investigated functional diversity of freshwater fishes at the world scale under the advisement of <a href="http://brosse.sebastien.free.fr">Pr. Sébastien Brosse</a> and <a href="http://villeger.sebastien.free.fr/">Dr. Sébastien Villéger</a></p>
 <p>My PhD dissertation is available <a href="data/Toussaint_2016_These.pdf">here</a> (in french only)</p>
 <div id="abstract" class="section level2">
 <h2>Abstract</h2>
@@ -375,6 +375,7 @@ div.tocify {
 </div>
 </div>
 
+<p>Copyright &copy; 2018 All rights reserved.</p>
 
 
 </div>
