--- a/index.html
+++ b/index.html
@@ -329,10 +329,21 @@ div.tocify {
 
 <p><link rel="stylesheet" href="styles.css" type="text/css"></p>
 <p><img src="data/AT_pic.jpg" style="width:30%; border:5px solid; margin-right: 20px" align="right"></p>
-<p>I like to analyze data to answer research questions and test hypotheses. Currently I investigate questions related to global correlation between functional and taxonomic diversity of distant groups (fishes, plants and fungi) at <a href="https://www.botany.ut.ee/macroecology/en/">University of Tartu</a> in the Macroecolofgy workgroup under the direction of <a href="https://www.botany.ut.ee/macroecology/en/partel">Meelis Pärtel</a>.</p>
+<div id="research" class="section level1">
+<h1>Research</h1>
+<p>I like to analyze data to answer research questions and test hypotheses. Currently I investigate questions related to global correlation between functional and taxonomic diversity of distant groups (fishes, plants and fungi) at <a href="https://www.botany.ut.ee/macroecology/en/">University of Tartu</a> in the Macroecology workgroup under the direction of <a href="https://www.botany.ut.ee/macroecology/en/partel">Pr. Meelis Pärtel</a>.</p>
 <p>I graduated from the <a href="http://www.univ-tlse3.fr/">University of Toulouse</a> with a MS in biostatistics in 2012. In 2012 I began working toward my PhD in macroecology as a PhD-student at <a href="www.edb.ups-tlse.fr">EDB-lab</a>, where I am investigating functional diversity of freshwater fishes at the world scale under the advisement of <a href="http://brosse.sebastien.free.fr/">Pr. Sébastien Brosse</a> and <a href="http://villeger.sebastien.free.fr/">Dr. Sébastien Villéger</a></p>
 <p>I am a well-known R enthusiast, including performing high levels graphics and data mining.</p>
+</div>
+<div id="curriculum-vitae" class="section level1">
+<h1>Curriculum Vitae</h1>
+<p>Current position: <strong>Research Fellow</strong> supported by <em>the Estonian Research Concil (MOBJD-276)</em></p>
+<p>Institute of Ecology and Earth Sciences</p>
+<p>Departement of Botany</p>
+<p>University of Tartu</p>
+<p>Estonia</p>
 <p>My full CV is available <a href="data/CV_Toussaint.pdf">here</a>.</p>
+</div>
 <div id="publications" class="section level1">
 <h1>Publications</h1>
 <p>The below publications represent my work to date. A full list of publications is available in <a href="https://scholar.google.fr/citations?user=oTxWHKgAAAAJ&amp;hl=fr">Google scholar</a> and <a href="https://www.researchgate.net/profile/Aurele_Toussaint">ResearchGate</a>.</p>
@@ -365,17 +376,17 @@ div.tocify {
 <p>2015 7th Biennal conference of the International Biogeography Society, Bayreuth, Germany : <em>Functional diversity of the freshwater fish fauna</em> (poster)</p>
 <p>2013 8th Symposium for European freshwater sciences, Munster, Germany: <em>Historical assemblage distinctiveness and the introduction of widespread non-native species explain worldwide changes in freshwater fish taxonomic dissimilarity</em></p>
 </div>
-<div id="phd-dissertation" class="section level1">
-<h1>PhD Dissertation</h1>
-<p>During my PhD, I investigated functional diversity of freshwater fishes at the world scale under the advisement of <a href="http://brosse.sebastien.free.fr">Pr. Sébastien Brosse</a> and <a href="http://villeger.sebastien.free.fr/">Dr. Sébastien Villéger</a></p>
-<p>My PhD dissertation is available <a href="data/Toussaint_2016_These.pdf">here</a> (in french only)</p>
-<div id="abstract" class="section level2">
-<h2>Abstract</h2>
+<div id="phd-thesis" class="section level1">
+<h1>PhD Thesis</h1>
+<p>During my PhD, I investigated functional diversity of freshwater fishes at the world scale under the advisement of <a href="http://brosse.sebastien.free.fr">Pr. Sébastien Brosse</a> and <a href="http://villeger.sebastien.free.fr/">Dr. Sébastien Villéger</a>.</p>
+<p><strong>Toussaint A.</strong> 2016. Diversité fonctionnelle des poissons d’eau douce à l’échelle mondiale: patrons, déterminants et impacts des activité humaines. Université de Toulouse. 223p. <a href="data/Toussaint_2016_These.pdf">pdf</a> (in french only)</p>
+<div id="detailed-thesis-abstract-in-english" class="section level2">
+<h2>Detailed thesis abstract in English</h2>
 <p>Biodiversity is often characterized only through its taxonomic facet, i.e. the number and list of species present in assemblages. However, recent studies show that biodiversity can not be summarized only by this facet because it does not reflect the ecological characteristics of the species. Several facets can describe biodiversity as functional diversity that allows considering the ecological traits of species and thus their role in ecosystem functioning. However, few studies have described this facet of biodiversity at large scale, its links with the taxonomic diversity and its responses to global change. The objectives of this thesis is to 1) describe and understand the distribution of the functional diversity of freshwater fish assemblages at the global scale and 2) quantify the consequences of human activities on both taxonomic and functional biodiversity facets. Towards these aims we have built a morphological traits database for more than 9,000 species of freshwater fish occurring in more than 1,000 river basins across the world. We have demonstrated that functional diversity is unequally distributed across the world and weakly related to the taxonomic diversity at global scale. For example, species-rich Neotropical rivers host more than 75% of the global functional diversity whereas the African or Asian rivers, also rich in species, host less than a quarter of the world functional diversity. Such a situation is explained by the functional uniqueness supported by some species of Neotropical fish orders that contribute to increase the functional diversity of this region. The functional diversity of the different biogeographic realms is also unequally vulnerable to extinction of endangered species, as Europe or North America could lose between 35% and 45% of their functional diversity, while the Neotropical realm appears less sensitive with only 10% of its functional diversity supported by vulnerable species. We also showed that the introduction of non-native species in many river basins across the world have contributed to profoundly changing the historical patterns of biodiversity. Indeed, species introductions have promoted a taxonomic homogenization of fish faunas across the world accompanied by a decrease in the number of unique species in the poorest assemblages. This change is largely due to the overriding effects of few non-native species largely introduced worldwide. In addition, non-native species have contributed to significantly increase the functional diversity of assemblages by 150% on average, up to 7 times greater than that reported for taxonomic diversity (20% on average). This demonstrates the high sensitivity of the functional diversity of fish assemblages face to changes in species composition and the need to consider the functional diversity for understanding the impact of current and future human activities. These results contribute to the knowledge on the biodiversity of the richest vertebrate clade and therefore have implications in terms of biodiversity conservation and management of freshwater ecosystems.</p>
 </div>
 </div>
 
-<p>Copyright &copy; 2018 All rights reserved.</p>
+<p>Copyright &copy; 2018 This material is presented to ensure timely dissemination of academic work. Copyright and all rights therein are retained by authors or by other copyright holders.</p>
 
 
 </div>
