--- a/blog.html
+++ b/blog.html
@@ -230,8 +230,9 @@ $(document).ready(function () {
 
 
 <p><link rel="stylesheet" href="styles.css" type="text/css"></p>
-<div id="blog" class="section level1">
-<h1>Blog</h1>
+<div id="keywords" class="section level2">
+<h2>Keywords</h2>
+<p><img src="data/wordcloud.png" style="width:75%; border:10px; margin-right: 10px"></p>
 </div>
 
 <p>Copyright &copy; 2018 This material is presented to ensure timely dissemination of academic work. Copyright and all rights therein are retained by authors or by other copyright holders.</p>
