--- a/blog.html
+++ b/blog.html
@@ -188,7 +188,7 @@ $(document).ready(function () {
   <a href="software.html">Data &amp; Scripts</a>
 </li>
 <li>
-  <a href="blog.html">Blog</a>
+  <a href="blog.html">Keywords</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
@@ -230,10 +230,7 @@ $(document).ready(function () {
 
 
 <p><link rel="stylesheet" href="styles.css" type="text/css"></p>
-<div id="keywords" class="section level2">
-<h2>Keywords</h2>
 <p><img src="data/wordcloud.png" style="width:75%; border:10px; margin-right: 10px"></p>
-</div>
 
 <p>Copyright &copy; 2018 This material is presented to ensure timely dissemination of academic work. Copyright and all rights therein are retained by authors or by other copyright holders.</p>
 
