--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@ div.tocify {
   <a href="software.html">Data &amp; Scripts</a>
 </li>
 <li>
-  <a href="blog.html">Blog</a>
+  <a href="blog.html">Keywords</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
