--- a/contact.html
+++ b/contact.html
@@ -188,7 +188,7 @@ $(document).ready(function () {
   <a href="software.html">Data &amp; Scripts</a>
 </li>
 <li>
-  <a href="blog.html">Blog</a>
+  <a href="blog.html">Keywords</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
