--- a/index.html
+++ b/index.html
@@ -399,12 +399,15 @@ div.tocify {
 </div>
 <div id="curriculum-vitae" class="section level1">
 <h1>Curriculum Vitae</h1>
-<p>Current position: <strong>Research Fellow</strong> supported by <em>the Estonian Research Concil (MOBJD-276)</em></p>
+<p><strong>ORCID</strong> <a href="https://orcid.org/0000-0002-5738-4637">0000-0002-5738-4637</a></p>
+<p><strong>Research Fellow</strong> supported by <em>the Estonian Research Concil (MOBJD-276)</em></p>
 <p>Institute of Ecology and Earth Sciences</p>
 <p>Departement of Botany</p>
 <p>University of Tartu</p>
 <p>Estonia</p>
-<p>My full CV is available <a href="data/CV_Toussaint.pdf">here</a>.</p>
+<p>Full CV available <a href="data/CV_Toussaint.pdf">here</a>.</p>
+<p>Mendeley <a href="https://www.mendeley.com/profiles/aurele-toussaint/">here</a></p>
+<p>ResearchGate <a href="https://www.researchgate.net/profile/Aurele_Toussaint">here</a></p>
 </div>
 <div id="publications" class="section level1">
 <h1>Publications</h1>
