--- a/blogPerso.html
+++ b/blogPerso.html
@@ -12,7 +12,7 @@
 
 
 
-<title>software.utf8.md</title>
+<title>blogPerso.utf8.md</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -323,27 +323,6 @@ $(document).ready(function () {
 
 
 <p><link rel="stylesheet" href="styles.css" type="text/css"></p>
-<p><img src="data/R.jpeg" style="width:5%; border:1px; margin-right: 1px"></p>
-<div id="functional-diversity-toussaint-et-al.-sci.-rep.-2016" class="section level3">
-<h3>Functional diversity (Toussaint et al. <em>Sci. Rep.</em> 2016)</h3>
-<ul>
-<li><a href="data/FunctionR_FDnull.R">FDnull</a>: R function to compare the functional volume of a community based on functional traits to a random a random pool assemblage</li>
-<li><a href="data/FunctionR_FDnullChge.R">FDnullChge</a>: R function to compare the functional volume of a community based on functional traits to a random a random pool assemblage</li>
-<li><a href="data/FunctionR_Funiq.R">Funiq</a>: R function to compute and illustrate the proportion of the area (in 2dimensions) or volume of a taxonomic group not filled by any others species of the community</li>
-<li><a href="data/FunctionR_Fvulne.R">Fvulne</a>: R function to compute and illustrate the proportion of the area (in 2dimensions) or volume loss if all vulnerable species disapeared</li>
-</ul>
-<p><img src="data/data.png" style="width:5%; border:1px; margin-right: 1px"></p>
-</div>
-<div id="functional-diversity-of-the-world-freshwater-fish-faunas-toussaint-et-al.-ecol.-lett.-2018" class="section level3">
-<h3>Functional diversity of the world freshwater fish faunas (Toussaint et al. <em>Ecol. Lett.</em> 2018)</h3>
-<ul>
-<li>Zipped file containing csv tables with information on the global distribution of freshwater fish species functional traits, basin occurrences, and taxonomic and functional indices. available on FigShare repository: <a href="https://figshare.com/articles/Functional_diversity_of_the_world_freshwater_fish_faunas/6984206">here</a></li>
-</ul>
-<p><img src="data/github.png" style="width:5%; border:1px; margin-right: 1px"></p>
-<ul>
-<li>This website has been made by <a href="https://rmarkdown.rstudio.com/">Rmarkdown</a> available on <a href="https://github.com/AureleToussaint/aurele">my Github page</a>.</li>
-</ul>
-</div>
 
 <p>Copyright &copy; 2020 This material is presented to ensure timely dissemination of academic work. Copyright and all rights therein are retained by authors or by other copyright holders.</p>
 
