--- a/blogPerso.html
+++ b/blogPerso.html
@@ -323,24 +323,14 @@ $(document).ready(function () {
 
 
 <p><link rel="stylesheet" href="styles.css" type="text/css"></p>
-<br>
-<h2 align="left">
-<b><font size="+2">Method comparison</font></b>
-</h2>
-<p><br> <img src="data/world.png" style="width:50%; border:1px; margin-right: 1px" align="left"><br />
+<p><br> <left><b><font size="+4">Method comparison</font></b></left> <br> <br> <img src="data/world.png" style="width:50%; border:1px; margin-right: 1px" align="left"><br />
 <br> <right> <font size="+2">The objective is to compare different approaches to the functional facet of biodiversity and compare how they jointly provide new ways to refine assessments of FD patterns and the effect of human activity. </font></right></p>
 <p><br> <br> <br> <br> <br> <br> <br> <br> <br> <br></p>
-<h2 align="right">
-<b><font size="+2">Global Functional Diversity</font></b>
-</h2>
-<p><br> <img src="data/glob.jpg" style="width:55%; border:1px; margin-right: 1px" align="right"><br />
+<p><right><b><font size="+4">Global Functional Diversity</font></b></right> <br> <br> <img src="data/glob.jpg" style="width:55%; border:1px; margin-right: 1px" align="right"><br />
 <br></p>
 <p><left><font size="+2"> This project aims to gather different databases of functional traits of plants and vertebrates and exploring the macro ecology of functional diversity among taxonomic groups in a context of global change.</font> </left></p>
-<p><br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br></p>
-<h2 align="left">
-<b>Cross-taxonomic diversity</b>
-</h2>
-<p><img src="data/crossTaxa.png" style="width:50%; border:1px; margin-right: 1px" align="left"><br />
+<p><br> <br> <br> <br> <br> <br> <br> <br> <br></p>
+<p><left><b><font size="+4">Cross-taxonomic diversity</font></b></left> <img src="data/crossTaxa.png" style="width:50%; border:1px; margin-right: 1px" align="left"><br />
 <br> <right> <font size="+2">The objective of this project is to study the taxonomic and functional diversities patterns of taxonomic groups representing contrasting ecosystems type and determine their congruence at global and biogeographical realm scales. </font></right> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br></p>
 <h2 align="right">
 <b>GIS application for conservation</b>
