--- a/blogPerso.html
+++ b/blogPerso.html
@@ -332,10 +332,7 @@ $(document).ready(function () {
 <p><br> <br> <br> <br> <br> <br> <br> <br> <br></p>
 <p><left><b><font size="+4">Cross-taxonomic diversity</font></b></left> <img src="data/crossTaxa.png" style="width:50%; border:1px; margin-right: 1px" align="left"><br />
 <br> <right> <font size="+2">The objective of this project is to study the taxonomic and functional diversities patterns of taxonomic groups representing contrasting ecosystems type and determine their congruence at global and biogeographical realm scales. </font></right> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br></p>
-<h2 align="right">
-<b>GIS application for conservation</b>
-</h2>
-<p><img src="data/GIS.png" style="width:50%; border:1px; margin-right: 1px" align="right"><br />
+<p><left><b><font size="+4">GIS application for conservation</font></b></left> <img src="data/GIS.png" style="width:50%; border:1px; margin-right: 1px" align="right"><br />
 <br> <left> <font size="+2">The objectives is to evaluate the status of the grassland in Estonia. This project was realized under the supervision of <a href="https://landscape.ut.ee/people/aveliina-helm/?lang=en">Dr. Aveliina Helm</a>. My main task was developing GIS and R algorithms for conservation prioritization maps. I also developed algorithms for <a href="https://www.syke.fi/en-US/Research__Development/Nature/Specialist_work/Zonation_in_Finland/Zonation_software">Zonation software</a>.</font> </left><br />
 <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br></p>
 
