update image title

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 
 <title>Aurele Toussaint</title>
+<img title="Aurele Toussaint" src="data/imageTitle.png" alt="AT" />
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
