--- a/RData.html
+++ b/RData.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Contact</title>
+<title>RData</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -338,12 +338,20 @@ $(document).ready(function () {
 </div>
 
 
-<title>
-Contact
-</title>
-<p><link rel="shortcut icon" href="data/imageTitle.png" type="image/png"> <link rel="stylesheet" href="styles.css" type="text/css"></p>
-<p>Institute of Ecology and Earth Sciences, Department of Botany<br> University of Tartu, Lai 40<br> Tartu 51005, Estonia<br> <a href="mailto:aurele.toussaint@ut.ee" class="email">aurele.toussaint@ut.ee</a><br></p>
-<p>Or connect with me on Twitter, Linkedin or ResearchGate (links in top right).</p>
+<p><link rel="shortcut icon" href="data/imageTitle.png" type="image/png"></p>
+<p><link rel="stylesheet" href="styles.css" type="text/css"></p>
+<p><img src="data/R.jpeg" style="width:8%; border:1px; margin-right: 1px" align="center"></p>
+<ul>
+<li><a href="data/FunctionR_FDnull.R">FDnull</a>: R function to compare the functional volume of a community based on functional traits to a random a random pool assemblage</li>
+<li><a href="data/FunctionR_FDnullChge.R">FDnullChge</a>: R function to compare the functional volume of a community based on functional traits to a random a random pool assemblage</li>
+<li><a href="data/FunctionR_Funiq.R">Funiq</a>: R function to compute and illustrate the proportion of the area (in 2dimensions) or volume of a taxonomic group not filled by any others species of the community</li>
+<li><a href="data/FunctionR_Fvulne.R">Fvulne</a>: R function to compute and illustrate the proportion of the area (in 2dimensions) or volume loss if all vulnerable species disapeared</li>
+</ul>
+<p><br> <br> <img src="data/data.png" style="width:8%; border:1px; margin-right: 1px" align="center"></p>
+<ul>
+<li>Zipped file containing csv tables with information on the global distribution of freshwater fish species functional traits, basin occurrences, and taxonomic and functional indices. available on FigShare repository: <a href="https://figshare.com/articles/Functional_diversity_of_the_world_freshwater_fish_faunas/6984206">here</a></li>
+</ul>
+<p><br> <br> <img src="data/github.png" style="width:8%; border:1px; margin-right: 1px" align="center"> This website has been made by <a href="https://rmarkdown.rstudio.com/">Rmarkdown</a> available on <a href="https://github.com/AureleToussaint/aurele">my Github page</a>.</p>
 
 <p>Copyright &copy; 2020 This material is presented to ensure timely dissemination of academic work. Copyright and all rights therein are retained by authors or by other copyright holders.</p>
 
