--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 
-<title>index.utf8</title>
+<title>Home</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -367,10 +367,10 @@ div.tocify {
   </a>
 </li>
 <li>
-  <a href="blogPerso.html">Projects</a>
+  <a href="Projects.html">Projects</a>
 </li>
 <li>
-  <a href="software.html">Data &amp; Scripts</a>
+  <a href="Rdata.html">Data &amp; Scripts</a>
 </li>
 <li>
   <a href="https://aureletoussaint.github.io/blog">My blog</a>
@@ -414,6 +414,10 @@ div.tocify {
 </div>
 
 
+<title>
+Home
+</title>
+<p><link rel="shortcut icon" href="data/imageTitle.png" type="image/png"></p>
 <p><link rel="stylesheet" href="styles.css" type="text/css"></p>
 <p>My main research interest is investigating questions related to functional diversity of vertebrates and plants in a context of global change. I am currently a research fellow at the <a href="https://www.botany.ut.ee/macroecology/en/">University of Tartu</a> in the Macroecology workgroup with <a href="https://www.botany.ut.ee/macroecology/en/partel">Pr. Meelis Pärtel</a> and <a href="https://www.botany.ut.ee/macroecology/en/carmona">Dr. Carlos P. Carmona</a>.</p>
 <p>I am also involved in different <a href="https://aureletoussaint.github.io/aurele/blogPerso.html">projects</a>.</p>
