--- a/Projects.html
+++ b/Projects.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Contact</title>
+<title>Projects</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -339,11 +339,22 @@ $(document).ready(function () {
 
 
 <title>
-Contact
+Projects
 </title>
-<p><link rel="shortcut icon" href="data/imageTitle.png" type="image/png"> <link rel="stylesheet" href="styles.css" type="text/css"></p>
-<p>Institute of Ecology and Earth Sciences, Department of Botany<br> University of Tartu, Lai 40<br> Tartu 51005, Estonia<br> <a href="mailto:aurele.toussaint@ut.ee" class="email">aurele.toussaint@ut.ee</a><br></p>
-<p>Or connect with me on Twitter, Linkedin or ResearchGate (links in top right).</p>
+<p><link rel="shortcut icon" href="data/imageTitle.png" type="image/png"></p>
+<p><link rel="stylesheet" href="styles.css" type="text/css"></p>
+<p><br> <left><b><font size="+4">Method comparison</font></b></left> <br> <br> <img src="data/world.png" style="width:50%; border:1px; margin-right: 1px" align="left"><br />
+<br> <right> <font size="+2">The objective is to compare different approaches to the functional facet of biodiversity and compare how they jointly provide new ways to refine assessments of FD patterns and the effect of human activity. </font></right></p>
+<p><br> <br> <br> <br> <br> <br> <br> <br> <br> <br></p>
+<p><right><b><font size="+4">Global Functional Diversity</font></b></right> <br> <br> <img src="data/glob.jpg" style="width:55%; border:1px; margin-right: 1px" align="right"><br />
+<br></p>
+<p><left><font size="+2"> This project aims to gather different databases of functional traits of plants and vertebrates and exploring the macro ecology of functional diversity among taxonomic groups in a context of global change.</font> </left></p>
+<p><br> <br> <br> <br> <br> <br> <br> <br> <br></p>
+<p><left><b><font size="+4">Cross-taxonomic diversity</font></b></left> <img src="data/crossTaxa.png" style="width:50%; border:1px; margin-right: 1px" align="left"><br />
+<br> <right> <font size="+2">The objective of this project is to study the taxonomic and functional diversities patterns of taxonomic groups representing contrasting ecosystems type and determine their congruence at global and biogeographical realm scales. </font></right> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br></p>
+<p><left><b><font size="+4">GIS application for conservation</font></b></left> <img src="data/GIS.png" style="width:50%; border:1px; margin-right: 1px" align="right"><br />
+<br> <left> <font size="+2">The objectives is to evaluate the status of the grassland in Estonia. This project was realized under the supervision of <a href="https://landscape.ut.ee/people/aveliina-helm/?lang=en">Dr. Aveliina Helm</a>. My main task was developing GIS and R algorithms for conservation prioritization maps. I also developed algorithms for <a href="https://www.syke.fi/en-US/Research__Development/Nature/Specialist_work/Zonation_in_Finland/Zonation_software">Zonation software</a>.</font> </left><br />
+<br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br></p>
 
 <p>Copyright &copy; 2020 This material is presented to ensure timely dissemination of academic work. Copyright and all rights therein are retained by authors or by other copyright holders.</p>
 
