--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@ Home
 <p><link rel="shortcut icon" href="data/imageTitle.png" type="image/png"></p>
 <p><link rel="stylesheet" href="styles.css" type="text/css"></p>
 <p>My main research interest is investigating questions related to functional diversity of vertebrates and plants in a context of global change. I am currently a research fellow at the <a href="https://www.botany.ut.ee/macroecology/en/">University of Tartu</a> in the Macroecology workgroup with <a href="https://www.botany.ut.ee/macroecology/en/partel">Pr. Meelis Pärtel</a> and <a href="https://www.botany.ut.ee/macroecology/en/carmona">Dr. Carlos P. Carmona</a>.</p>
-<p>I am also involved in different <a href="https://aureletoussaint.github.io/aurele/blogPerso.html">projects</a>.</p>
+<p>I am also involved in different <a href="https://aureletoussaint.github.io/website/Projects.html">projects</a>.</p>
 <p>I graduated from the <a href="http://www.univ-tlse3.fr/">University of Toulouse</a> with a MS in biostatistics in 2012. In 2012 I started my PhD in macroecology at <a href="www.edb.ups-tlse.fr">EDB-lab</a>, where I was investigating functional diversity of freshwater fishes at the world scale under the advisement of <a href="http://brosse.sebastien.free.fr/">Pr. Sébastien Brosse</a> and <a href="http://villeger.sebastien.free.fr/">Dr. Sébastien Villéger</a></p>
 <p>I am a well-known R enthusiast, including performing high levels graphics and data mining.</p>
 <h2 align="left">
