--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@ div.tocify {
   <a href="Projects.html">Projects</a>
 </li>
 <li>
-  <a href="Rdata.html">Data &amp; Scripts</a>
+  <a href="RData.html">Data &amp; Scripts</a>
 </li>
 <li>
   <a href="https://aureletoussaint.github.io/blog">My blog</a>
