--- a/contact.html
+++ b/contact.html
@@ -294,7 +294,7 @@ $(document).ready(function () {
   <a href="Projects.html">Projects</a>
 </li>
 <li>
-  <a href="Rdata.html">Data &amp; Scripts</a>
+  <a href="RData.html">Data &amp; Scripts</a>
 </li>
 <li>
   <a href="https://aureletoussaint.github.io/blog">My blog</a>
