--- a/RData.html
+++ b/RData.html
@@ -349,9 +349,9 @@ $(document).ready(function () {
 </ul>
 <p><br> <br> <img src="data/data.png" style="width:8%; border:1px; margin-right: 1px" align="center"></p>
 <ul>
-<li>Zipped file containing csv tables with information on the global distribution of freshwater fish species functional traits, basin occurrences, and taxonomic and functional indices. available on FigShare repository: <a href="https://figshare.com/articles/Functional_diversity_of_the_world_freshwater_fish_faunas/6984206">here</a></li>
+<li><p>Zipped file containing csv tables with information on the global distribution of freshwater fish species functional traits, basin occurrences, and taxonomic and functional indices. available on FigShare repository: <a href="https://figshare.com/articles/Functional_diversity_of_the_world_freshwater_fish_faunas/6984206">here</a></p></li>
+<li><p>R data for courses <a href="https://rpubs.com/aurele/howToR">here</a> <br> <br> <img src="data/github.png" style="width:8%; border:1px; margin-right: 1px" align="center"> This website has been made by <a href="https://rmarkdown.rstudio.com/">Rmarkdown</a> available on <a href="https://github.com/AureleToussaint/aurele">my Github page</a>.</p></li>
 </ul>
-<p><br> <br> <img src="data/github.png" style="width:8%; border:1px; margin-right: 1px" align="center"> This website has been made by <a href="https://rmarkdown.rstudio.com/">Rmarkdown</a> available on <a href="https://github.com/AureleToussaint/aurele">my Github page</a>.</p>
 
 <p>Copyright &copy; 2020 This material is presented to ensure timely dissemination of academic work. Copyright and all rights therein are retained by authors or by other copyright holders.</p>
 
